# notatioantiqua

./: .gitignore  CMakeCache.txt  CMakeLists.txt  COPYING.txt  DESCRIPTION  Doxyfile  Info.plist  LICENSE  Lizenz  NaProg-de.qm  NaProg-de.ts  NaProg-en.qm  NaProg-en.ts  NaProg-fr.qm  NaProg-fr.ts  NotatioAntiqua.desktop  README  cmake_install.cmake  header_info.txt  i18n.qrc  main.cpp  naapplication.cpp  naapplication.h  naclefselect.h  naclefselect.ui  nadoinit.cpp  nadoinit.h  nafindreplace.cpp  nafindreplace.h  nafindreplace.ui  naheaderwizard.cpp  naheaderwizard.h  naheaderwizard.ui  nahelp.cpp  nahelp.h  nahelp.ui  nainit.cpp  nainit.h  nainit.ui  najgabc.cpp  (+20 more)
Licenses/: ufl-1.0.txt
contrib/class/: gregorian.cls
contrib/dict/: hyph_de_DE.dic
contrib/templates/: article.natemplate  gregorianclass.natemplate  inclusion.natemplate
help/: about.html  about_html.css  compiling.html  default.css  fdl-1.3-standalone.html  gfdl.html  gpl3.html  gpl3_html.css  gregorio-full.html  gregorio-full_html.css  gregorio-quick.html  gregorio-quick_html.css  gregorio-short.html  gregorio.html  gui.html  gui_html.css  index.html  index_html.css  init.html  lgpl-3.0-standalone.html  lgpl3.html  licenses.html  masterpage.html  nahelp.css  notantiq-de.qch  notantiq-fr.qch  notantiq-fr.qhc  notantiq.qch  notantiq.qhc  notantiq.qhcp  notantiq.qhp  templates.html  ufl.html  wizards.html
help/doxygen/html/: annotated.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
help/doxygen/html/d0/d96/: classnafindreplace.html
help/doxygen/html/d0/d9d/: classnafindreplace-members.html
help/doxygen/html/d0/ded/: classnajgabc-members.html
help/doxygen/html/d1/d10/: class_highlighter-members.html
help/doxygen/html/d1/d6f/: hyphen_8h_source.html
help/doxygen/html/d1/d94/: struct___hash_tab-members.html
help/doxygen/html/d1/d96/: struct_q_header_info-members.html
help/doxygen/html/d1/df2/: class_mdi_child-members.html
help/doxygen/html/d2/db0/: struct___hyphen_trans.html
help/doxygen/html/d2/deb/: naprog_8h_source.html
help/doxygen/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  classes_2.js  classes_3.js  functions_0.js  pages_1.js  searchdata.js  variables_0.js
help/doxygen/latex/: annotated.tex  class_highlighter.tex  class_n_a_clef_select.tex  class_n_a_help.tex  class_n_a_settings.tex  classnaapplication.tex  classnadoinit.tex  files.tex  hierarchy.tex  hnjalloc_8c.tex  index.tex  naapplication_8h.tex  naclefselect_8cpp.tex  naclefselect_8h.tex  naheaderwizard_8cpp.tex  nahelp_8cpp.tex  nainit_8cpp.tex  nainit_8h.tex  namdi_8h.tex  namespace_ui.tex  naprog_8cpp.tex  refman.tex  struct___hash_entry.tex  struct___hash_tab.tex  struct___hyphen_dict.tex
help/doxygen/man/man3/: Highlighter.3  MdiChild.3  NAClefSelect.3  NAHeaderWizard.3  NAHelp.3  NASettings.3  NaProg.3  NaView.3  QHeaderInfo.3  QHelpBrowser.3  Ui.3  Version.3  _HashEntry.3  _HashTab.3  _HyphenDict.3  _HyphenState.3  _HyphenTrans.3  hnjalloc.c.3  hnjalloc.h.3  hyphen.c.3  hyphen.h.3  main.cpp.3  naapplication.3  naapplication.cpp.3  naapplication.h.3  naclefselect.cpp.3  naclefselect.h.3  nadoinit.3  nadoinit.cpp.3  nadoinit.h.3  naheaderwizard.cpp.3  naheaderwizard.h.3  nahelp.cpp.3  nahelp.h.3  nainit.3  nainit.cpp.3  nainit.h.3  namdi.cpp.3  namdi.h.3  naprog.cpp.3  (+11 more)
html/: annotated.html  class_highlighter-members.html  class_highlighter.html  class_mdi_child-members.html  class_mdi_child.html  class_n_a_clef_select-members.html  class_n_a_clef_select.html  class_n_a_header_wizard-members.html  class_n_a_header_wizard.html  class_n_a_help-members.html  class_n_a_help.html  class_n_a_settings-members.html  class_n_a_settings.html  class_na_prog-members.html  class_na_prog.html  class_q_help_browser-members.html  class_q_help_browser.html  classes.html  classnaapplication-members.html  classnaapplication.html  classnadoinit-members.html  classnadoinit.html  classnafindreplace-members.html  classnafindreplace.html  classnainit-members.html  classnainit.html  classnajgabc-members.html  classnajgabc.html  classnapsalm-members.html  classnapsalm.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hnjalloc_8h_source.html  hyphen_8h_source.html  index.html  naapplication_8h_source.html  (+25 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_3.js  searchdata.js  variables_0.js
images/: notantiq-dmgb.afphoto  notantiq-dmgb.afphoto~lock~  notantiq-icon.xcf  notantiq.icns
latex/: annotated.tex  class_highlighter.tex  class_mdi_child.eps  class_mdi_child.tex  class_n_a_clef_select.eps  class_n_a_clef_select.tex  class_n_a_header_wizard.eps  class_n_a_header_wizard.tex  class_n_a_help.tex  class_n_a_settings.tex  class_na_prog.eps  class_na_prog.tex  class_q_help_browser.tex  classnaapplication.eps  classnaapplication.tex  classnadoinit.eps  classnadoinit.tex  classnafindreplace.eps  classnafindreplace.tex  classnainit.eps  classnainit.tex  classnajgabc.tex  classnapsalm.eps  classnapsalm.tex  files.tex  hierarchy.tex  hnjalloc_8h_source.tex  index.tex  naclefselect_8h_source.tex  nadoinit_8h_source.tex  naheaderwizard_8h_source.tex  najgabc_8h_source.tex  namdi_8h_source.tex  naprog_8h_source.tex  napsalm_8h_source.tex  nasyntax_8h_source.tex  refman.tex  struct___hyphen_state.tex  version_8h_source.tex
notatioantiqua.xcodeproj/: project.pbxproj
notatioantiqua.xcodeproj/project.xcworkspace/xcuserdata/davidgippner.xcuserdatad/: UserInterfaceState.xcuserstate
notatioantiqua.xcodeproj/xcshareddata/xcschemes/: notatioantiqua.xcscheme
qifw/: config.xml
qifw/meta/: package.xml
(+80 files in other folders)
